
  [ Jonathan Patrick Davies ]
  * get-branches: Open the teams code page before making a new directory.
  * doc/get-branches.1: Created.
  * hugdaylist: Improved argument and error handling.
  * pull-lp-source:
    - Use optparse for option handling.
    - Check that the 'release' and 'package' actually exist on Launchpad.
    - Use subprocess for dget calls.

  [ Siegfried-Angel Gevatter Pujals ]
  * Add the GNU General Public License header to all scripts.
  * Remove files AUTHORS (it duplicated content from debian/copyright) and
    README (superseded by the manpages).

 -- Siegfried-Angel Gevatter Pujals <rainct@ubuntu.com>  Mon, 11 Aug 2008 19:44:53 +0200

ubuntu-dev-tools (0.36ubuntu1) intrepid; urgency=low

  [ Jonathan Patrick Davies ]
  * doc/ Created new manpages for:
    - what-patch.1.
    - dch-repeat.1.
    - grab-attachment.1.
  * doc/requestsync.1: Described variables used by requestsync in man
    page. (LP: #237595)
  * hugdaylist:
    - Added code to handle exceptions and short version of GPL.
    - Rewrote option handling with optparse.
    - Filter bugs subscribed to the ubuntu-archive team.
  * get-branches:
    - Rewrote option handling with optparse.
    - Added short version of GPL to header.
    - Fixed regular expressions to work with new Launchpad interface.
    - Use subprocess.call() on Bazaar instead of os.system().
  * debian/copyright: Updated Authors and copyrights.

  [ Siegfried-Angel Gevatter Pujals ]
  * Change the versioning scheme from 0.XX to 0.XXubuntu1. Delete
    debian/source.lintian-overrides, as with this it isn't necessary anymore.
  * General manpage cleanup (fix typos, use the same section names in all
    manpages, etc).

 -- Jonathan Patrick Davies <jpds@ubuntu.com>  Sun, 10 Aug 2008 22:02:05 +0100
ubuntu-dev-tools (0.35) intrepid; urgency=low

  [ Siegfried-Angel Gevatter Pujals ]
  * doc/update-maintainer.1:
     - Remove the reference to the --no-changelog option from the manpage.
  * requestsync: